# adventofcode

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/aoc2021/: day_1.py  day_2.py
src/aoc2022/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/aoc2023/: day_1.py  day_2.py  day_3.py  day_4.py
src/aoc_common/: util.py
src/solutions/: common.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
tests/: conftest.py  test_2021.py  test_2022.py  test_2023.py  test_days.py
