[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["elias <elias@altruistiq.com>"]
readme = "README.md"
repository = "https://github.com/eliasmistler/adventofcode"
packages = [{ include = "aq_utils", from = "src" }, { include = "aq_base", from = "src" }, { include = "aq_dwh", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
toolz = "^0.12.0"
parse = "^1.19.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
