[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["elias <elias@altruistiq.com>"]
readme = "README.md"
repository = "https://github.com/eliasmistler/adventofcode"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
toolz = ">=0.12"
parse = "^1"
numpy = "^1"
sympy = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
